--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <section class="container-fluid">
         <h1 class="text-center">RESERVAS:</h1>
 
-        <table id="pedidos" class="display table table-bordered table-hover table-responsive" style="width:100%">
+        <table id="pedidos" class="display table table-bordered table-hover" style="width:100%">
             <thead>
                 <tr>
                     <th scope="col" rowspan="2" class="dt-nosearch">nº Pedido</th>
