--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             </tfoot>
         </table>
-<hr />
+<hr style="clear: both;"/>
         <figure style="width:320px;background-color:#333;margin: 0 auto;margin-bottom:20px;"><img src="./img/logo.png" class="img-fluid"> </figure>
              
 
