--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:image" content="{{og_image}}">
         -->
 		<link rel="manifest" href="./manifest.json">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Playfair+Display:700&display=swap" rel="stylesheet">
+        <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Open+Sans:400|Playfair+Display:700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 		<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
