--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		
         <title>Moulin Chocolat</title>
         <meta name="title" content="Moulin Chocolat" />
-        <meta name="description" content="Área de Administración: Listado" />                
-        <!--
+        <meta name="description" content="Área de Administración: Listado" />  
+		
+		<link rel="shortcut icon" href="./favicon-2.png">
+		
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="{{title}}">
-        <meta property="og:locale" content="{{og_locale}}">
-        <meta property="og:url" content="{{url}}">
-        <meta property="og:title" content="{{title}}">
-        <meta property="og:description" content="{{description}}">
+        <meta property="og:locale" content="es_ES">
+        <meta property="og:url" content="https://moulin-chocolat.github.io/">
+        <meta property="og:title" content="Moulin Chocolat, tu pastelería de influencia francesa en Madrid">
+        <meta property="og:description" content="Moulin Chocolat, tu pastelería de influencia francesa en Madrid. Creamos recuerdos inolvidables, un regalo para tus sentidos.">
+		<!--
         <meta property="og:image" content="{{og_image}}">
         -->
 		<link rel="manifest" href="./manifest.json">
