--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>  
 		<script type="text/javascript" charset="utf8" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>  
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-	   
+		<script type="text/javascript" charset="utf8" src="service-worker.js"></script>
 		<script type="text/javascript" charset="utf8" src="./js/listing.js"></script>
 	</body>
 </html>
