--- a/index.html
+++ b/index.html
@@ -125,12 +125,28 @@
 				</div>  
 			</div>
 		</footer>
-		
+		<script>
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('./service-worker.js')
+				.then(function(reg) {
+				   if (reg.installing) {
+					 console.log('SW installing');
+				   } else if (reg.waiting) {
+					 console.log('SW waiting');
+				   } else if (reg.active) {
+					 console.log('SW activated');
+				   }
+				}).catch(function(error) {
+				   // registration failed
+				   console.log('Registration failed with ' + error);
+				});
+		}
+		</script>		
 		<script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>  
 		<script type="text/javascript" charset="utf8" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>  
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-		<script type="text/javascript" charset="utf8" src="service-worker.js"></script>
+
 		<script type="text/javascript" charset="utf8" src="./js/listing.js"></script>
 	</body>
 </html>
