--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<th scope="col" rowspan="2" class="dt-nosort dt-nosearch">Gallete</th>
 						<th scope="col" rowspan="2" class="dt-nosort dt-nosearch">Botella Cacao</th>
 						<th scope="col" rowspan="2" class="dt-nosort dt-nosearch">Choco Caliente</th>
-						<th scope="col" rowspan="2" class="dt-nosearch">Pagado</th>                        
+						<th scope="col" rowspan="2" class="">Pagado</th>                        
 					</tr>
 
 					<tr>
