--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</head>
 	<body class="">
 		<main class="container-fluid">			
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#nueva_reserva"><i class="fa fa-plus-circle"></i> Nueva Reserva
+<button type="button" class="btn bt-sm btn-primary" style="position: relative;top: 35px;" data-toggle="modal" data-target="#nueva_reserva"><i class="fa fa-plus-circle"></i> Nueva Reserva
 </button>
 			<table id="pedidos" class="display table table-bordered table-striped table-hover" style="width:100%">
 				<thead>
